--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,9 +27,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/ApplicationGSB.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.javadoc.zip=/home/btssio/Bibliotheques/JDBC/javadoc.zip
+file.reference.ojdbc6.jar=/home/btssio/Bibliotheques/JDBC/ojdbc6.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.javadoc.zip}:\
+    ${file.reference.ojdbc6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
